terraform/policies/security/disallow-privileged-containers.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: validate-privileged
      match:
        resources:
          kinds:
            - Pod
            - Deployment
            - DaemonSet
            - StatefulSet
      validate:
        message: "Privileged containers are not allowed."
        pattern:
          spec:
            containers:
              - securityContext:
                  privileged: "false"
